kubernetes/yaml/pde/updater.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: primeapps-updater
spec:
  containers:
    - name: primeapps-updater
      image: primeapps/primeapps-updater:1.19.132.2-debian
