kubernetes/yaml/pde/auth-preview.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: primeapps-auth-preview
  namespace: primeapps
  labels:
    k8s-app: "primeapps-auth-preview"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      k8s-app: primeapps-auth-preview
  template:
    metadata:
      labels:
        k8s-app: primeapps-auth-preview
    spec:
      volumes:
        - name: "self-signed-ssl"
          secret:
            secretName: primeapps-auth-preview-selfsigned-ssl      
      containers:
        - name: primeapps-auth-preview
          image: primeapps/primeapps-auth:1.19.132.2-debian
---
kind: Service
apiVersion: v1
metadata:
  name: primeapps-auth-preview-service
  namespace: primeapps
spec:
  type: "ClusterIP"
  selector:
    k8s-app: primeapps-auth-preview
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: primeapps-auth-preview-ingress
  namespace: primeapps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |-
      add_header X-Robots-Tag "noindex, nofollow";
spec:
  tls:
    - hosts:
        - auth-preview.primeapps.io
      secretName: primeapps-wildcard-ssl
  rules:
    - host: auth-preview.primeapps.io
      http:
        paths:
          - path: "/"
            backend:
              serviceName: primeapps-auth-preview-service
              servicePort: 80
