kubernetes/yaml/pde/studio.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: primeapps-studio
  namespace: primeapps
  labels:
    k8s-app: "primeapps-studio"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      k8s-app: primeapps-studio
  template:
    metadata:
      labels:
        k8s-app: primeapps-studio
    spec:
      volumes:
        - name: studio-data-volume
          persistentVolumeClaim:
            claimName: studio-data-volume-claim
      imagePullSecrets:
        - name: primeapps-docker-hub
      containers:
        - name: primeapps-studio
          image: primeappsadmin/primeapps-studio:1.19.132.2
          volumeMounts:
            - mountPath: "/data"
              name: studio-data-volume
---
kind: Service
apiVersion: v1
metadata:
  name: primeapps-studio-service
  namespace: primeapps
spec:
  type: "ClusterIP"
  selector:
    k8s-app: primeapps-studio
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: primeapps-studio-ingress
  namespace: primeapps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |-
      add_header X-Robots-Tag "noindex, nofollow";
spec:
  tls:
    - hosts:
        - studio.primeapps.io
      secretName: primeapps-wildcard-ssl
  rules:
    - host: studio.primeapps.io
      http:
        paths:
          - path: "/"
            backend:
              serviceName: primeapps-studio-service
              servicePort: 80
